# api/src/main/java/com/senac/api/mapper/FilterApiMapper.java
@@ -5,14 +5,14 @@ import com.senac.domain.input.Filter;
 public class FilterApiMapper {
     private FilterApiMapper(){}
 
-    public static Filter toDomain(Integer pageNumber,
-                           String serviceDescription,
-                           String priceCategory,
-                           Double latitude,
-                           Double longitude) {
+    public static Filter toDomain(String serviceDescription,
+                                  String priceCategory,
+                                  String serviceType,
+                                  Double latitude,
+                                  Double longitude) {
         return Filter.builder()
-                .pageNumber(pageNumber)
                 .serviceDescription(serviceDescription)
+                .serviceType(serviceType)
                 .priceCategory(priceCategory)
                 .lat(latitude)
                 .lon(longitude)
