# infrastructure/src/main/java/com/senac/infrastructure/constants/ParamsConstant.java
@@ -6,10 +6,12 @@ public class ParamsConstant {
     // SERVICE PARAMS
     public static final String SERVICE_DESC = "service_description";
     public static final String SERVICE_PRICE = "service_price";
+    public static final String SERVICE_TYPE = "service_type";
 
     // COMPANY PARAMS
     public static final String PRICE_CATEGORY = "price_category";
     public static final String PAGE_NUMBER = "page_number";
     public static final String GEO_LAT = "lat";
     public static final String GEO_LON = "lon";
+    public static final String DISTANCE = "distance";
 }
