# infrastructure/src/main/java/com/senac/infrastructure/entity/ServiceC.java
@@ -1,6 +1,7 @@
 package com.senac.infrastructure.entity;
 
 
+import com.senac.infrastructure.enums.ServiceType;
 import lombok.*;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.elasticsearch.annotations.Document;
@@ -19,6 +20,9 @@ public class ServiceC {
 
     @Field(type = FieldType.Text)
     private String description;
+
+    @Field(type = FieldType.Text)
+    private ServiceType type;
 
     @Field(type = FieldType.Double)
     private Double price;
